# winvest-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  database.db  db.py  docker-compose.yml  gui.py  history_cache.py  lint.bat  manager.py  moex_api.py  pyproject.toml  requirements.txt  serve.py  setup.cfg
models/: response_model.py
predictions/: basic.py
predictions/utils/: algebraic_functions.py
tests/: conftest.py
tests/test_api/: test_register.py  test_sign_in.py
winvest/: __init__.py
winvest/api/: __init__.py  __main__.py  authorization.py  authorization_route.py  history_route.py  manager.py  operations_route.py  portfolio_route.py  prediction_route.py  serve.py  stock_route.py
winvest/gui/: __init__.py  __main__.py  gui.py  header.py  requester.py  stock_page.py
winvest/manager/: __init__.py  history_manage.py  operation_manage.py  portfolio_manage.py  stock_manage.py  user_manage.py
winvest/models/: db.py  request_models.py  response_model.py
winvest/predictions/: basic.py
winvest/predictions/utils/: algebraic_functions.py
winvest/utils/: history_cache.py  moex_api.py
