[tool.poetry]
name = "winvest-api"
version = "0.1.0"
description = "Investment package manager with cost forecasting."
authors = ["okumuramura <bugagaga88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
redis = "^4.3.1"
requests = "^2.27.1"
statsmodels = "^0.13.2"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.36"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.3.0"
unify = "^0.5"
flake8 = "^4.0.1"
pylint = "^2.13.8"
mypy = "^0.950"
pytest-mock = "^3.7.0"
types-redis = "^4.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
